--- a/templates/index.html
+++ b/templates/index.html
@@ -11,7 +11,7 @@
 <ul class="menu">
    <li><a href="/inc_form">Inclusão</a></li>
    <li><a href="/consulta">Consulta</a></li>
-   <li><a href="/escolha">Atualização</a></li>
+   <li><a href="/templates/escolha.html">Atualização</a></li>
 </ul>
 </body>
 </html>
