--- a/templates/index.html
+++ b/templates/index.html
@@ -2,16 +2,34 @@
 <html lang="pt-br">
 <head>
    <meta charset="UTF-8">
-   <title>Menu do CRUD</title>
-   <link rel="stylesheet" href="/static/crud.css">
+   <meta http-equiv="refresh" content="2.5">
+   <title>Pega Malandro</title>
+   <link rel="stylesheet" href="/static/index.css">
+
 </head>
 <body>
-<h1>Gestão de Clientes</h1>
-<hr>
-<ul class="menu">
-   <li><a href="/inc_form">Inclusão</a></li>
-   <li><a href="/consulta">Consulta</a></li>
-   <li><a href="/templates/escolha.html">Atualização</a></li>
-</ul>
+   <header>
+      <nav>
+         <div class="icone">
+            <img src="/static/imagens/logo.png" alt="icone">
+         </div>
+         <div>
+            <h1>Pega Malandro</h1>
+         </div>
+         <div class="links">
+            <a href="/inc_form">Inclusão</a>
+            <a href="/consulta">Consulta</a>
+            <a href="/templates/escolha.html">Atualização</a>
+            
+         </div>
+      </nav>
+   </header>
+   <main>
+      
+   </main>
+   <footer>
+
+   </footer>
+
 </body>
 </html>
