continuação do index principal

--- a/templates/index.html
+++ b/templates/index.html
@@ -2,30 +2,50 @@
 <html lang="pt-br">
 <head>
    <meta charset="UTF-8">
-   <meta http-equiv="refresh" content="2.5">
+   
    <title>Pega Malandro</title>
-   <link rel="stylesheet" href="/static/index.css">
+   <link rel="stylesheet" href="/static/nav.css">
+   <link rel="stylesheet" href="/static/cards.css">
 
 </head>
 <body>
    <header>
       <nav>
-         <div class="icone">
-            <img src="/static/imagens/logo.png" alt="icone">
-         </div>
-         <div>
-            <h1>Pega Malandro</h1>
-         </div>
+         <section>
+            <div class="icone">
+               <img src="/static/imagens/logo.png" alt="icone">
+            </div>
+            <div>
+               <h1>Pega Malandro</h1>
+            </div>
+         </section>
+
          <div class="links">
-            <a href="/inc_form">Inclusão</a>
-            <a href="/consulta">Consulta</a>
-            <a href="/templates/escolha.html">Atualização</a>
-            
+            <a href="/templates/escolha.html">Login</a>
          </div>
       </nav>
    </header>
    <main>
-      
+      <section class="cards_pricipais">
+         <a href="">
+            <div class="card">
+               <img src="/static/imagens/Delegacia icone.png" alt="Criar">
+               <h4>Criar Boletim</h4>
+            </div>
+         </a>
+         <a href="">
+            <div class="card">
+               <img src="/static/imagens/Alterar.png" alt="Alterar">
+               <h4>Alterar Boletim</h4>
+            </div>
+         </a>
+         <a href="">
+            <div class="card">
+               <img src="/static/imagens/Luneta.png" alt="Consutar">
+               <h4>Consultar Boletim</h4>
+            </div>
+         </a>
+      </section>
    </main>
    <footer>
 
