--- a/templates/index.html
+++ b/templates/index.html
@@ -1,17 +1,21 @@
 <!DOCTYPE html>
 <html lang="pt-br">
+
 <head>
    <meta charset="UTF-8">
-   
+   <meta http-equiv="refresh" content="1">
    <title>Pega Malandro</title>
-   <link rel="stylesheet" href="/static/nav.css">
-   <link rel="stylesheet" href="/static/cards.css">
+   <link rel="stylesheet" href="/static/css/nav.css">
+   <link rel="stylesheet" href="/static/css/cards.css">
+   <link rel="stylesheet" href="/static/css/text_principal.css">
+
 
 </head>
+
 <body>
    <header>
       <nav>
-         <section>
+         <section class="logo">
             <div class="icone">
                <img src="/static/imagens/logo.png" alt="icone">
             </div>
@@ -21,35 +25,53 @@
          </section>
 
          <div class="links">
-            <a href="/templates/escolha.html">Login</a>
+            <a href="/templates/login.html">Login</a>
          </div>
       </nav>
    </header>
    <main>
-      <section class="cards_pricipais">
-         <a href="">
+      <section class="cards_principais">
+         <a href="inclusao.html">
             <div class="card">
-               <img src="/static/imagens/Delegacia icone.png" alt="Criar">
-               <h4>Criar Boletim</h4>
+               <div class="parte_cima">
+                  <img src="/static/imagens/Delegacia icone.png" alt="Criar">
+               </div>
+               <div class="parte_baixo">
+                  <h4>Criar Boletim</h4>
+               </div>
             </div>
          </a>
-         <a href="">
+         <a href="alteracao.html">
             <div class="card">
-               <img src="/static/imagens/Alterar.png" alt="Alterar">
-               <h4>Alterar Boletim</h4>
+               <div class="parte_cima">
+                  <img src="/static/imagens/Alterar.png" alt="Alterar">
+               </div>
+               <div class="parte_baixo">
+                  <h4>Alterar Boletim</h4>
+               </div>
             </div>
          </a>
-         <a href="">
+         <a href="consulta.html">
             <div class="card">
-               <img src="/static/imagens/Luneta.png" alt="Consutar">
-               <h4>Consultar Boletim</h4>
+               <div class="parte_cima">
+                  <img src="/static/imagens/Luneta.png" alt="Consultar">
+               </div>
+               <div class="parte_baixo">
+                  <h4>Consultar Boletim</h4>
+               </div>
             </div>
          </a>
       </section>
+      <section class="text_principal">
+         <h1>Atenção !!</h1>
+         <p>Ligar para a polícia é uma ação crucial em diversas situações de emergência e pode ser a diferença entre a segurança e o perigo. Quando testemunhamos um crime em andamento, como um roubo, agressão ou vandalismo, a resposta imediata das autoridades pode prevenir danos maiores e garantir a detenção dos responsáveis. Além disso, em casos de acidentes de trânsito, especialmente aqueles com feridos, a presença policial é vital para organizar o resgate e manter a ordem no local. A polícia também deve ser chamada em situações de desaparecimento, onde cada minuto conta para localizar a pessoa desaparecida, especialmente se for uma criança ou idoso. Existem diferentes tipos de delegacias que desempenham papéis específicos na proteção e serviço à comunidade. As Delegacias de Polícia Civil são responsáveis por investigações criminais e atendimento ao público para registro de ocorrências. Dentro da Polícia Civil, há delegacias especializadas, como a Delegacia de Homicídios, focada na investigação de assassinatos, e a Delegacia de Narcóticos, que combate o tráfico de drogas. Outro exemplo importante é a Delegacia de Proteção à Criança e ao Adolescente, que lida com crimes contra menores, incluindo abuso e exploração infantil. As Delegacias de Polícia Militar têm um papel preventivo, patrulhando ruas e garantindo a ordem pública. Elas são as primeiras a responder a chamadas de emergência e são responsáveis por ações imediatas em situações de crise. As Delegacias de Atendimento à Mulher são especializadas em casos de violência doméstica e oferecem um ambiente seguro e acolhedor para as vítimas denunciarem abusos. A Delegacia de Trânsito se concentra em infrações e acidentes no trânsito, trabalhando para manter a segurança nas vias públicas. Ligar para a polícia é essencial não só para proteger a si mesmo, mas também para garantir a segurança da comunidade. Quando todos cooperam e acionam as autoridades competentes, contribuem para a manutenção da ordem e a diminuição da criminalidade. Além disso, as informações fornecidas pela população podem ser vitais para investigações e resolução de casos. A Delegacia de Crimes Cibernéticos, por exemplo, depende muitas vezes de denúncias para rastrear atividades ilícitas online e proteger os cidadãos de fraudes e ataques virtuais. Em situações de emergência médica, muitas vezes a polícia é chamada para ajudar a controlar o trânsito e permitir o rápido acesso das ambulâncias. Em casos de desastres naturais, como enchentes e terremotos, a polícia coordena operações de resgate e assistência às vítimas. A Delegacia de Meio Ambiente investiga crimes ambientais, atuando na preservação dos recursos naturais e combate a ações ilegais que prejudicam o ecossistema. Por fim, a colaboração com a polícia é fundamental em eventos públicos, onde a segurança de grandes multidões precisa ser garantida. As Delegacias de Defesa do Consumidor protegem os cidadãos contra fraudes e práticas comerciais desleais, ajudando a manter um mercado justo e equilibrado. Ligar para a polícia é um ato de cidadania e responsabilidade social que ajuda a construir uma sociedade mais segura e justa para todo</p>
+      </section>
    </main>
+
    <footer>
 
    </footer>
 
 </body>
+
 </html>
