--- a/templates/index.html
+++ b/templates/index.html
@@ -31,7 +31,7 @@
    </header>
    <main>
       <section class="cards_principais">
-         <a href="inclusao.html">
+         <a href="alt_form.html">
             <div class="card">
                <div class="parte_cima">
                   <img src="/static/imagens/Delegacia icone.png" alt="Criar">
@@ -58,6 +58,16 @@
                </div>
                <div class="parte_baixo">
                   <h4>Consultar Boletim</h4>
+               </div>
+            </div>
+         </a>
+         <a href="adm.html">
+            <div class="card">
+               <div class="parte_cima">
+                  <img src="" alt="ADM">
+               </div>
+               <div class="parte_baixo">
+                  <h4>ADM</h4>
                </div>
             </div>
          </a>
