Fixed index hrf's

--- a/templates/index.html
+++ b/templates/index.html
@@ -33,7 +33,7 @@
       <nav class="nav-bar">
         <ul>
           <li>
-            <a class="nav-link" href="/templates/login.html">Login</a>
+            <a class="nav-link" href="/login">Login</a>
           </li>
         </ul>
       </nav>
@@ -42,7 +42,7 @@
     <main>
       <section>
         <div class="card-container">
-          <a class="card" href="alt_form.html">
+          <a class="card" href="/alt_form">
             <div class="card-icon">
               <img src="/static/imagens/Delegacia icone.png" alt="Criar" />
             </div>
@@ -52,7 +52,7 @@
             </div>
           </a>
 
-          <a class="card" href="alteracao.html">
+          <a class="card" href="/alteracao">
             <div class="card-icon">
               <img src="/static/imagens/Alterar.png" alt="Alterar" />
             </div>
@@ -62,7 +62,7 @@
             </div>
           </a>
 
-          <a class="card" href="consulta.html">
+          <a class="card" href="/consulta">
             <div class="card-icon">
               <img src="/static/imagens/Luneta.png" alt="Consultar" />
             </div>
@@ -72,7 +72,7 @@
             </div>
           </a>
 
-          <a class="card" href="adm.html">
+          <a class="card" href="/adm">
             <div class="card-icon">
               <img src="" alt="ADM" />
             </div>
