--- a/templates/delecao_boletim_ocorrencia.html
+++ b/templates/delecao_boletim_ocorrencia.html
@@ -2,15 +2,15 @@
 <html lang='pt-BR'>
     <head>
         <meta charset='UTF-8'>
-        <title>Resultado da Atualização</title>
+        <title>Resultado da Deleção</title>
         <link rel='stylesheet' href='/static/style.css'>
     </head>
     <body>
-        <h1>Atualização - Resultado da Atualização</h1>
+        <h1>Deleção - Resultado da Deleção</h1>
         <hr>
         <div>
-            <h2>País Atualizado com Sucesso!</h2>
-            <h2>Número de Linhas Atualizadas = {{ numero_linhas }}</h2>
+            <h2>Boletim de Ocorrência Deletado com Sucesso!</h2>
+            <h2>Número de Linhas Deletadas = {{ numero_linhas }}</h2>
         </div>
         <br>
         [ <a href='/'> Retornar ao Menu</a> ]
