--- a/templates/formulario_insercao_usuario.html
+++ b/templates/formulario_insercao_usuario.html
@@ -9,19 +9,19 @@
         <h1>Inserção - Formulário de Entrada de Dados</h1>
         <hr>
         <div>
-            <form action='/insercao_pais' method='post'>
+            <form action='/insercao_usuario' method='post'>
                 <table>
                     <tr>
                         <td>Nome:</td>
                         <td>
                             <label>
-                                <input type='text' size='46' maxlength='46' name='nome_pais' required>
+                                <input type='text' size='46' maxlength='46' name='nome_usuario' required>
                             </label>
                         </td>
                     </tr>
                     <tr>
                         <td colspan='1'>
-                            <input type='submit' value='Inserir País'>
+                            <input type='submit' value='Inserir Usuário'>
                         </td>
                     </tr>
                 </table>
