--- a/templates/index.html
+++ b/templates/index.html
@@ -2,37 +2,37 @@
 <html lang='pt-BR'>
     <head>
         <meta charset='UTF-8'>
-        <title>Menu de Cadastro dos Países e Estados</title>
+        <title>Menu de Cadastro dos Usuários e Boletins de Ocorrências</title>
         <link rel='stylesheet' href='/static/style.css'>
     </head>
     <body>
         <section>
-            <h1>Gestão de Países</h1>
+            <h1>Gestão de Usuários</h1>
             <hr>
             <ul class='menu'>
                 <li>
-                    <a href='/formulario_insercao_pais'>Inclusão de País</a>
+                    <a href='/formulario_insercao_usuario'>Inclusão de Usuário</a>
                 </li>
                 <li>
-                    <a href='/consulta_pais'>Consulta de País</a>
+                    <a href='/consulta_usuario'>Consulta de Usuário</a>
                 </li>
                 <li>
-                    <a href='/escolha_atualizacao_pais'>Atualização de País</a>
+                    <a href='/escolha_atualizacao_usuario'>Atualização de Usuário</a>
                 </li>
             </ul>
         </section>
         <section>
-            <h1>Gestão de Estados</h1>
+            <h1>Gestão de Boletim de Ocorrência</h1>
             <hr>
             <ul class='menu'>
                 <li>
-                    <a href='/formulario_insercao_estado'>Inclusão de Estado</a>
+                    <a href='/formulario_insercao_boletim_ocorrencia'>Inclusão de Boletim de Ocorrência</a>
                 </li>
                 <li>
-                    <a href='/consulta_estado'>Consulta de Estado</a>
+                    <a href='/consulta_boletim_ocorrencia'>Consulta de Boletim de Ocorrência</a>
                 </li>
                 <li>
-                    <a href='/escolha_atualizacao_estado'>Atualização de Estado</a>
+                    <a href='/escolha_atualizacao_boletim_ocorrencia'>Atualização de Boletim de Ocorrência</a>
                 </li>
             </ul>
         </section>
