--- a/templates/consulta_usuario.html
+++ b/templates/consulta_usuario.html
@@ -6,20 +6,18 @@
         <link rel='stylesheet' href='/static/style.css'>
     </head>
     <body>
-        <h1>Consulta - Mostra todos os Estados</h1>
+        <h1>Consulta - Mostra todos os Usuários</h1>
         <hr>
         <div>
             <table class='listagem'>
                 <tr>
                     <th>Identificador</th>
                     <th>Nome</th>
-                    <th>Código</th>
                 </tr>
-                {% for estado in lista %}
+                {% for usuario in lista %}
                     <tr>
-                        <td>{{ estado['identificador_estado'] }}</td>
-                        <td>{{ estado['nome_estado'] }}</td>
-                        <td>{{ estado['codigo_pais'] }}</td>
+                        <td>{{ usuario['identificador_usuario'] }}</td>
+                        <td>{{ usuario['nome_usuario'] }}</td>
                     </tr>
                 {% endfor %}
             </table>
