--- a/templates/delecao_usuario.html
+++ b/templates/delecao_usuario.html
@@ -2,15 +2,15 @@
 <html lang='pt-BR'>
     <head>
         <meta charset='UTF-8'>
-        <title>Resultado da Inserção</title>
+        <title>Resultado da Deleção</title>
         <link rel='stylesheet' href='/static/style.css'>
     </head>
     <body>
-        <h1>Inserção - Resultado da Inserção</h1>
+        <h1>Deleção - Resultado da Deleção</h1>
         <hr>
         <div>
-            <h2>Estado Inserido com Sucesso!</h2>
-            <h2>identificador_estado = {{ identificador }}</h2>
+            <h2>Usuário Deletado com Sucesso!</h2>
+            <h2>Número de Linhas Deletadas = {{ numero_linhas }}</h2>
         </div>
         <br>
         [ <a href='/'> Retornar ao Menu</a> ]
