--- a/templates/formulario_atualizacao_boletim_ocorrencia.html
+++ b/templates/formulario_atualizacao_boletim_ocorrencia.html
@@ -9,13 +9,13 @@
         <h1>Atualização - Formulário de Atualização de Dados</h1>
         <hr>
         <div>
-            <form action='/atualizacao_pais' method='post'>
+            <form action='/atualizacao_boletim_ocorrencia' method='post'>
                 <table>
                     <tr>
                         <td>Identificador:</td>
                         <td>
                             <label>
-                                <input type='text' size='5' maxlength='5' name='identificador_pais' value='{{ identificador_pais }}' readonly>
+                                <input type='text' size='5' maxlength='5' name='identificador_boletim_ocorrencia' value='{{ identificador_boletim_ocorrencia }}' readonly>
                             </label>
                         </td>
                     </tr>
@@ -23,13 +23,21 @@
                         <td>Nome:</td>
                         <td>
                             <label>
-                                <input type='text' size='46' maxlength='46' name='nome_pais' value='{{ nome_pais }}' required>
+                                <input type='text' size='46' maxlength='46' name='nome_boletim_ocorrencia' value='{{ nome_boletim_ocorrencia }}' required>
                             </label>
                         </td>
                     </tr>
                     <tr>
-                        <td colspan='2'>
-                            <input type='submit' value='Atualizar País'>
+                        <td>Código:</td>
+                        <td>
+                            <label>
+                                <input type='number' size='5' maxlength='5' name='codigo_usuario' value='{{ codigo_usuario }}' required>
+                            </label>
+                        </td>
+                    </tr>
+                    <tr>
+                        <td colspan='3'>
+                            <input type='submit' value='Atualizar boletim_ocorrencia'>
                         </td>
                     </tr>
                 </table>
