--- a/templates/formulario_atualizacao_usuario.html
+++ b/templates/formulario_atualizacao_usuario.html
@@ -9,13 +9,13 @@
         <h1>Atualização - Formulário de Atualização de Dados</h1>
         <hr>
         <div>
-            <form action='/atualizacao_estado' method='post'>
+            <form action='/atualizacao_usuario' method='post'>
                 <table>
                     <tr>
                         <td>Identificador:</td>
                         <td>
                             <label>
-                                <input type='text' size='5' maxlength='5' name='identificador_estado' value='{{ identificador_estado }}' readonly>
+                                <input type='text' size='5' maxlength='5' name='identificador_usuario' value='{{ identificador_usuario }}' readonly>
                             </label>
                         </td>
                     </tr>
@@ -23,21 +23,13 @@
                         <td>Nome:</td>
                         <td>
                             <label>
-                                <input type='text' size='46' maxlength='46' name='nome_estado' value='{{ nome_estado }}' required>
+                                <input type='text' size='46' maxlength='46' name='nome_usuario' value='{{ nome_usuario }}' required>
                             </label>
                         </td>
                     </tr>
                     <tr>
-                        <td>Código:</td>
-                        <td>
-                            <label>
-                                <input type='number' size='5' maxlength='5' name='codigo_pais' value='{{ codigo_pais }}' required>
-                            </label>
-                        </td>
-                    </tr>
-                    <tr>
-                        <td colspan='3'>
-                            <input type='submit' value='Atualizar Estado'>
+                        <td colspan='2'>
+                            <input type='submit' value='Atualizar Usuário'>
                         </td>
                     </tr>
                 </table>
