--- a/templates/formulario_insercao_boletim_ocorrencia.html
+++ b/templates/formulario_insercao_boletim_ocorrencia.html
@@ -9,13 +9,13 @@
         <h1>Inserção - Formulário de Entrada de Dados</h1>
         <hr>
         <div>
-            <form action='/insercao_estado' method='post'>
+            <form action='/insercao_boletim_ocorrencia' method='post'>
                 <table>
                     <tr>
                         <td>Nome:</td>
                         <td>
                             <label>
-                                <input type='text' size='46' maxlength='46' name='nome_estado' required>
+                                <input type='text' size='46' maxlength='46' name='nome_boletim_ocorrencia' required>
                             </label>
                         </td>
                     </tr>
@@ -23,13 +23,13 @@
                         <td>Código:</td>
                         <td>
                             <label>
-                                <input type='number' size='5' maxlength='5' name='codigo_pais' required>
+                                <input type='number' size='5' maxlength='5' name='codigo_usuario' required>
                             </label>
                         </td>
                     </tr>
                     <tr>
                         <td colspan='2'>
-                            <input type='submit' value='Inserir Estado'>
+                            <input type='submit' value='Inserir boletim_ocorrencia'>
                         </td>
                     </tr>
                 </table>
