more names fixing

--- a/templates/consulta_boletim_ocorrencia.html
+++ b/templates/consulta_boletim_ocorrencia.html
@@ -6,7 +6,7 @@
         <link rel='stylesheet' href='/static/style.css'>
     </head>
     <body>
-        <h1>Consulta - Mostra todos os Boletins de Ocorrências</h1>
+        <h1>Consulta - Mostra todos os Boletins de Ocorrência</h1>
         <hr>
         <div>
             <table class='listagem'>
