--- a/templates/formulario_atualizacao_boletim_ocorrencia.html
+++ b/templates/formulario_atualizacao_boletim_ocorrencia.html
@@ -37,7 +37,7 @@
                     </tr>
                     <tr>
                         <td colspan='3'>
-                            <input type='submit' value='Atualizar boletim_ocorrencia'>
+                            <input type='submit' value='Atualizar Boletim de Ocorrência'>
                         </td>
                     </tr>
                 </table>
