--- a/templates/formulario_insercao_boletim_ocorrencia.html
+++ b/templates/formulario_insercao_boletim_ocorrencia.html
@@ -29,7 +29,7 @@
                     </tr>
                     <tr>
                         <td colspan='2'>
-                            <input type='submit' value='Inserir boletim_ocorrencia'>
+                            <input type='submit' value='Inserir Boletim de Ocorrência'>
                         </td>
                     </tr>
                 </table>
