--- a/templates/index.html
+++ b/templates/index.html
@@ -2,7 +2,7 @@
 <html lang='pt-BR'>
     <head>
         <meta charset='UTF-8'>
-        <title>Menu de Cadastro dos Usuários e Boletins de Ocorrências</title>
+        <title>Menu de Cadastro dos Usuários e Boletins de Ocorrência</title>
         <link rel='stylesheet' href='/static/style.css'>
     </head>
     <body>
