--- a/templates/relatorio_grafico_organograma.html
+++ b/templates/relatorio_grafico_organograma.html
@@ -20,8 +20,8 @@
                     {% for dado in dados %}
                         , [{ v: 'usuario_{{ dado.identificador_usuario }}', f: '{{ dado.nome_usuario }}<div style="color: red; font-style: italic">Usuário</div>' }, 'planeta', 'O Usuário']
 
-                        {% for boletim_ocorrencia in dado.boletim_ocorrencias %}
-                            , [{ v:'boletim_ocorrencia_{{ boletim_ocorrencia.identificador_boletim_ocorrencia }}', f: '{{ boletim_ocorrencia.nome_boletim_ocorrencia }}<div style="color: red; font-style: italic">boletim_ocorrencia</div>' }, 'usuario_{{ dado.identificador_usuario }}', 'O boletim_ocorrencia']
+                        {% for boletim_ocorrencia in dado.boletins_ocorrencia %}
+                            , [{ v:'boletim_ocorrencia_{{ boletim_ocorrencia.identificador_boletim_ocorrencia }}', f: '{{ boletim_ocorrencia.nome_boletim_ocorrencia }}<div style="color: red; font-style: italic">boletim_ocorrencia</div>' }, 'usuario_{{ dado.identificador_usuario }}', 'O Boletim de Ocorrência']
                         {% endfor %}
                     {% endfor %}
                 ]);
