--- a/templates/relatorio_grafico_pizza.html
+++ b/templates/relatorio_grafico_pizza.html
@@ -10,13 +10,13 @@
 
             function renderizarGrafico() {
                 var dados = google.visualization.arrayToDataTable([
-                    ['Usuário', 'Quantidade de boletim_ocorrencias']
+                    ['Usuário', 'Quantidade de Boletins de Ocorrência']
                     {% for dado in dados %}
-                        , ['{{ dado.nome_usuario }}', {{ dado.quantidade_boletim_ocorrencias }}]
+                        , ['{{ dado.nome_usuario }}', {{ dado.quantidade_boletins_ocorrencia }}]
                     {% endfor %}
                 ]);
 
-                var opcoes = { title: 'Gráfico de Pizza dos Usuários e das Quantidades de boletim_ocorrencias' };
+                var opcoes = { title: 'Gráfico de Pizza dos Usuários e das Quantidades de Boletins de Ocorrência' };
 
                 var grafico = new google.visualization.PieChart(document.getElementById('grafico_pizza'));
                 grafico.draw(dados, opcoes);
