--- a/templates/escolha_atualizacao_boletim_ocorrencia.html
+++ b/templates/escolha_atualizacao_boletim_ocorrencia.html
@@ -3,7 +3,7 @@
     <head>
         <meta charset='UTF-8'>
         <title>Escolher para Atualizar</title>
-        <link rel='stylesheet' href='/static/style.css'>
+        <link rel='stylesheet' href='../static/style.css'>
     </head>
     <body>
         <h1>Atualização - Escolha um Boletim de Ocorrência para Atualizar</h1>
