--- a/templates/consulta_usuario.html
+++ b/templates/consulta_usuario.html
@@ -3,7 +3,7 @@
     <head>
         <meta charset='UTF-8'>
         <title>Consulta</title>
-        <link rel='stylesheet' href='/static/style.css'>
+        <link rel='stylesheet' href='../static/style.css'>
     </head>
     <body>
         <h1>Consulta - Mostra todos os Usuários</h1>
