--- a/templates/formulario_atualizacao_usuario.html
+++ b/templates/formulario_atualizacao_usuario.html
@@ -3,7 +3,7 @@
     <head>
         <meta charset='UTF-8'>
         <title>Formulário de Atualização</title>
-        <link rel='stylesheet' href='/static/style.css'>
+        <link rel='stylesheet' href='../static/style.css'>
     </head>
     <body>
         <h1>Atualização - Formulário de Atualização de Dados</h1>
