--- a/templates/formulario_insercao_boletim_ocorrencia.html
+++ b/templates/formulario_insercao_boletim_ocorrencia.html
@@ -3,7 +3,7 @@
     <head>
         <meta charset='UTF-8'>
         <title>Formulário de Inserção</title>
-        <link rel='stylesheet' href='/static/style.css'>
+        <link rel='stylesheet' href='../static/style.css'>
     </head>
     <body>
         <h1>Inserção - Formulário de Entrada de Dados</h1>
