--- a/templates/resultado_delecao_usuario.html
+++ b/templates/resultado_delecao_usuario.html
@@ -3,7 +3,7 @@
     <head>
         <meta charset='UTF-8'>
         <title>Resultado da Deleção</title>
-        <link rel='stylesheet' href='/static/style.css'>
+        <link rel='stylesheet' href='../static/style.css'>
     </head>
     <body>
         <h1>Deleção - Resultado da Deleção</h1>
