--- a/templates/resultado_insercao_usuario.html
+++ b/templates/resultado_insercao_usuario.html
@@ -3,7 +3,7 @@
     <head>
         <meta charset='UTF-8'>
         <title>Resultado da Inserção</title>
-        <link rel='stylesheet' href='/static/style.css'>
+        <link rel='stylesheet' href='../static/style.css'>
     </head>
     <body>
         <h1>Inserção - Resultado da Inserção</h1>
