--- a/templates/login.html
+++ b/templates/login.html
@@ -21,6 +21,9 @@
                 <div>
                     <button type='submit'>Entrar no Sistema</button>
                 </div>
+                <div>
+                    <a href='/cadastro'>Não Possui Login? Cadastrar-se!</a>
+                </div>
             </form>
             <p class='msg'>{{ msg }}</p>
         </div>
