--- a/templates/login.html
+++ b/templates/login.html
@@ -56,9 +56,11 @@
         <button type="submit">Login</button>
 
         <div class="wrapper">
-          <a href="/cadastrar_usuario">Não tem uma conta? Cadastre-se.</a>
+          <a href="/cadastro">Não tem uma conta? Cadastre-se.</a>
           <a href="/recuperar_senha">Esqueceu a senha?</a>
         </div>
+        
+        <p class='msg'>{{ msg }}</p>
       </form>
     </main>
 
