type and href changes

--- a/templates/cadastro_usuario.html
+++ b/templates/cadastro_usuario.html
@@ -80,7 +80,7 @@
 
         <div class="form-container">
           <input required type="email" placeholder="Email:" />
-          <input required type="password" placeholder="Telefone:" />
+          <input required type="number" placeholder="Telefone:" />
         </div>
 
         <div class="form-container">
