--- a/templates/login.html
+++ b/templates/login.html
@@ -56,7 +56,7 @@
 
         <div class="wrapper">
           <a href="/cadastrar">Não tem uma conta? Cadastre-se.</a>
-          <a href="/esqueceu">Esqueceu a senha?</a>
+          <a href="/recuperar_senha">Esqueceu a senha?</a>
         </div>
       </form>
     </main>
